--- a/VCELIN/public/styles/hives.css
+++ b/VCELIN/public/styles/hives.css
@@ -1,18 +1,53 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f7f7f7;
+    margin: 0;
+    height: 100vh;
+}
+
+/* Horní panel */
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #333;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+}
+
+/* Odkazy v panelu */
+.navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 14px 20px;
+    display: inline-block;
+}
+
+.navbar a:hover {
+    background-color: #575757;
+}
+
+/* Kontejner pro obsah pod navbar */
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    justify-content: center;
+    height: calc(100vh - 60px); /* Celková výška minus výška navigačního panelu */
+    padding-top: 60px; /* Odsazení kvůli fixnímu navbaru */
 }
 
+/* Styl pro nadpis */
 h1 {
     color: #333;
     margin-top: 20px;
 }
 
+/* Formulář */
 form {
     background-color: #fff;
     padding: 20px;
@@ -22,11 +57,21 @@ form {
     margin-bottom: 20px;
 }
 
-input[type="number"],
-input[type="text"] {
+label,
+select,
+input[type="date"],
+input[type="text"],
+input[type="number"] {
+    display: block;
     width: 100%;
+    margin-bottom: 15px;
+}
+
+input[type="number"],
+input[type="text"],
+select,
+input[type="date"] {
     padding: 10px;
-    margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
@@ -34,7 +79,9 @@ input[type="text"] {
 }
 
 input[type="number"]:focus,
-input[type="text"]:focus {
+input[type="text"]:focus,
+select:focus,
+input[type="date"]:focus {
     border-color: #007BFF;
     outline: none;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
